KC-1267: Assign document to person implementation.
