# src/Controller/FoldersController.php
@@ -5,8 +5,10 @@ declare(strict_types=1);
 namespace App\Controller;
 
 use App\Enum\BepremsEnum;
+use App\Enum\FolderEnum;
 use App\Enum\PersonEnum;
 use App\Exception\ApiException;
+use App\Exception\ResourceNotFoundException;
 use App\Facade\InternalApi\PersonFacade;
 use App\Fetcher\FolderFetcher;
 use App\Services\FolderService;
@@ -16,6 +18,7 @@ use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
 use Symfony\Component\HttpFoundation\JsonResponse;
 use Symfony\Component\HttpFoundation\Request;
 use Symfony\Component\HttpFoundation\Response;
+use Symfony\Component\HttpKernel\Exception\NotFoundHttpException;
 use Symfony\Component\Routing\Annotation\Route;
 
 /**
@@ -88,7 +91,8 @@ class FoldersController extends AbstractController
     /**
      * @Route("/{id}/add-person", name="add_person", methods="POST")
      */
-    public function createPerson(int $id, Request $request): JsonResponse {
+    public function createPerson(int $id, Request $request): JsonResponse
+    {
         try {
             $personUid = $this->personService->addPerson($id, $request->toArray());
         } catch (\Exception $exception) {
@@ -96,5 +100,21 @@ class FoldersController extends AbstractController
         }
 
         return $this->json([PersonEnum::PERSON_UID => $personUid]);
+    }
+
+    /**
+     * @Route("/{folderId}/persons/{personUid}/documents/{documentUid}", name="assign_document_to_person", methods="PUT")
+     */
+    public function assignDocument(int $folderId, Request $request): JsonResponse
+    {
+        try {
+            $this->personService->assignDocument(array_merge($request->attributes->get('_route_params'), [FolderEnum::FOLDER_ID => $folderId]));
+        } catch (ResourceNotFoundException $exception) {
+            throw new NotFoundHttpException($exception->getMessage());
+        } catch (\Exception $exception) {
+            throw new ApiException(Response::HTTP_BAD_REQUEST, $exception->getMessage());
+        }
+
+        return $this->json(null, Response::HTTP_NO_CONTENT);
     }
 }
